# ChangeLog for dev-ruby/sqlite3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.14 2014/01/01 14:25:55 patrick Exp $

  01 Jan 2014; Patrick Lauer <patrick@gentoo.org> sqlite3-1.3.6.ebuild,
  sqlite3-1.3.8-r1.ebuild:
  Remove ruby18 target as dependencies lost support already

  02 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -sqlite3-1.3.7.ebuild,
  -sqlite3-1.3.8.ebuild:
  Cleanup old.

*sqlite3-1.3.8-r1 (07 Oct 2013)

  07 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +sqlite3-1.3.8-r1.ebuild:
  Add ruby20 target.

*sqlite3-1.3.8 (25 Aug 2013)

  25 Aug 2013; Hans de Graaff <graaff@gentoo.org> +sqlite3-1.3.8.ebuild:
  Version bump.

*sqlite3-1.3.7 (01 Feb 2013)

  01 Feb 2013; Hans de Graaff <graaff@gentoo.org> +sqlite3-1.3.7.ebuild:
  Version bump.

  01 Feb 2013; Hans de Graaff <graaff@gentoo.org> -sqlite3-1.3.3.ebuild:
  Cleanup.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> sqlite3-1.3.6.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> sqlite3-1.3.6.ebuild:
  Stable for HPPA (bug #435968).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> sqlite3-1.3.6.ebuild:
  ia64/sparc stable wrt #435968

  28 Sep 2012; Johannes Huber <johu@gentoo.org> sqlite3-1.3.6.ebuild:
  Stable for x86, wrt bug #435968

  27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> sqlite3-1.3.6.ebuild:
  stable ppc ppc64, bug #435968

  24 Sep 2012; Agostino Sarubbo <ago@gentoo.org> sqlite3-1.3.6.ebuild:
  Stable for amd64, wrt bug #435968

  16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> -sqlite3-1.3.2.ebuild,
  -sqlite3-1.3.4-r1.ebuild, -sqlite3-1.3.4.ebuild, -sqlite3-1.3.5.ebuild,
  sqlite3-1.3.6.ebuild:
  Remove old; bump latest to EAPI 4; remove FAKEGEM_NAME; use short syntax for
  dependnecies; build faq through TASK_DOC.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml: