@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST sqlite3-1.3.6.gem 57344 SHA256 b0063859dd46819dd228f9629adfbc16649dfeef35b90eba9757537c0be1ecdb SHA512 952bbea9863a3fd65b217fed62f37356e76fbb40fb9b2599876113e069611d65c9d1bac891580700a0d0e809411881f50774d18fdbe0ad1202ac792c366b7030 WHIRLPOOL a020b7bba1bdcb27864767bd2b8e9db023706d0f52b356f63acf78a01b81be4c5d83e10d5cfa0c11ad2525bda1cb1457186cf572bee2a065d21e98e4b3a3fb48
 DIST sqlite3-1.3.8.gem 58880 SHA256 6a97b019e177d33472bac1aab199d9ae8c24f18eb63461cadc3223607a82287a SHA512 376e5e0f40697a5cf3d3140aee041f41114bdbadb55425eaa0e5c663e17ff6872f466cc08abfbede319d5e377fd47f73aaf1aa9134cf609fbdbea39480bbe56f WHIRLPOOL 615c0005918898fca7dabe3a234fe3a615e7144c557a9cd7e5517a01adfced98d80fff6f4a19c13511624c57cb6b349a10f420e1e641afbe077570bcd0c1e886
-EBUILD sqlite3-1.3.6.ebuild 2298 SHA256 516c096dfe071b29241f890c99e312cc46e227a16495b3588929625bd1948564 SHA512 96aed99a7eac83318c7135dc27077110aa210e92e0ff234cd31d6747e3238f478aa707c3e47b009fa390b9b3d7df2531020bc86c1a356f002a2bf5c611ed3306 WHIRLPOOL e9ec03f479e7d8532034f730408bc7ad13afa18b3e4aeb6503f3cd8907168565524ee02eaf53c71ac6c0c54f4ffa0a368974650ec2733fd31e09f01df3baea80
-EBUILD sqlite3-1.3.8-r1.ebuild 2434 SHA256 419bbb5a0e69af444d118efbf698c4d2da574ecc5b3836ca2f623e191e994f6c SHA512 6ff9321484ad4c1f84d83b0bb02873ec0282a7bc57d7bb2c8e6b9ad47e9e9fc0b0c404f36673af3134dae87793f2ab3ccb85ad99b47281abc25c11f7ac7dada5 WHIRLPOOL 477d8d238ce6bdb5f55a8564a6e6450b40503edd719086817a96b85ea8a7f23372a2fd88ba8e6441e1c597475ab2297de2358e5c974a7d2456425380049aa15b
-MISC ChangeLog 10449 SHA256 7be157d18bc851f8d3d18d4870024c0d00f95f6f7b81efb99bffb4bed5955d77 SHA512 a11a998572b457b4b1d38141004e84ec11002ee7a39efdb7fa2c6a383cfec8e90bf10ccfa1860c51a856d07e2b7971d5d2e8c7fee9c0e1464c006c884bcd5607 WHIRLPOOL 8852734508a6b2bf85e15fb3102c881e9415495ddb35c8af2abeb52ac305fc39576c0b5b121fcb8b9ed7e67cf35f311089e69c8f927b2d55a01c9bcfeed14671
+EBUILD sqlite3-1.3.6.ebuild 2299 SHA256 16c2627988633224c5c3921976cbc54f4f99a4d9624dd648858677743a90e76f SHA512 49c23a888a5685f1b469b0f192f57c3d6c2f4c3d7a5ad1bda255aefe0ddb7806ad2c50f6e318c861f8c2f87b1658e83db30a6ff3c6f254b438a571171fba17d4 WHIRLPOOL 8885fdcf0613fe5cb08170b399636f3e1af9ecabafecdd32add44f6b39eb9debf1d9b893349dd01bb9d410d146a5c3e0d59b0a8570bbeeec58be26ff14ed8f70
+EBUILD sqlite3-1.3.8-r1.ebuild 2439 SHA256 db70fbc190a944450f301bd3eb6cd060b054ca196c3f74f5efeeb18e93448cc7 SHA512 505bd89f99a1ad508b968a0afc6e0b581d6f69da82cad4fb778fd04c19d7f4908a90186962bb35b666314619be8fc594295669f5ae8997fd4cbb4aaa84f8f165 WHIRLPOOL b412b3eec45f3b92be50e9cba569a8db846c8e22d0d58e9e1789aca1f0024998b8dfb8eb9fcebde6ba6318860d6b1b810601aafc53bddd1e588537cfe8bdb880
+MISC ChangeLog 10578 SHA256 ff84a9678ebf803d6519b8b4c9fc14ce91bf54d02ba2521ca9bc25a54d4ba8e6 SHA512 398c8a1b44447d7b9fe175d496f265221dba3bece10dab153866bc3f61ecae0314453561cf1eab7d81f15dceee6cfb90a6e64f2b3b44f3ff9e31a850b9b5e7af WHIRLPOOL 9b73f427c220365c87357edd046a1a6a0df3d585e68b427be6c88c390317c832dde7668e6c50218224b40965797e9a99f6b812371a66688629dbccd58118cf39
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlLFHBsACgkQiIP6VqMIqNfHKAEAkq8SsTcrWaUrAL94jGR2hVe9
+brj3KViVdw7aI8wCVDsA/2XsXdNEtOoLj8RjPDymk1e2sRo3ePRSGSrCnlORTZgs
+=oIWB
+-----END PGP SIGNATURE-----
