@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/sqlite3-1.3.6.ebuild,v 1.9 2014/01/01 14:25:55 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/sqlite3-1.3.6.ebuild,v 1.10 2014/01/02 07:58:18 graaff Exp $
 
 EAPI=4
-USE_RUBY="ree18 ruby19"
+USE_RUBY="ruby18 ruby19"
 
 RUBY_FAKEGEM_TASK_DOC="docs faq"
 RUBY_FAKEGEM_DOCDIR="doc faq"
@@ -56,7 +56,7 @@ each_ruby_install() {
 	# sqlite3` was already part of sqlite3-ruby requirements.
 	cat - <<EOF > "${T}/sqlite3-ruby.gemspec"
 # generated by ebuild
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/sqlite3-1.3.6.ebuild,v 1.9 2014/01/01 14:25:55 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/sqlite3-1.3.6.ebuild,v 1.10 2014/01/02 07:58:18 graaff Exp $
 Gem::Specification.new do |s|
   s.name = "sqlite3-ruby"
   s.version = "${RUBY_FAKEGEM_VERSION}"
