@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sqlite3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.14 2014/01/01 14:25:55 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3/ChangeLog,v 1.15 2014/01/02 07:58:18 graaff Exp $
+
+  02 Jan 2014; Hans de Graaff <graaff@gentoo.org> sqlite3-1.3.6.ebuild,
+  sqlite3-1.3.8-r1.ebuild:
+  Restore ruby18. Drop ree18.
 
   01 Jan 2014; Patrick Lauer <patrick@gentoo.org> sqlite3-1.3.6.ebuild,
   sqlite3-1.3.8-r1.ebuild:
